Updated front, but not all

--- a/OperaExt/browser_extension/popup.html
+++ b/OperaExt/browser_extension/popup.html
@@ -1,13 +1,22 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  
+    <meta charset="UTF-8">
+    <title>Osas?</title>
 </head>
 <body>
-  <p>
-    Lorem ipsum dolor sit amet consectet
-  </p>
-  <button id="convertButton">Convert to Uppercase</button>
-  <script src="popup.js"></script>
+<div class="container">
+  <div class="head"></div>
+  <div class="body">
+    <div class="originalText">
+
+    </div>
+    <button id="TranslateBut">Translate</button>
+    <div class="translatedText">
+
+    </div>
+  </div>
+  <div class="footer"></div>
+</div>
 </body>
 </html>
