add stable api and front

--- a/OperaExt/browser_extension/popup.html
+++ b/OperaExt/browser_extension/popup.html
@@ -30,11 +30,11 @@
         </div>
 
         <div class="translatedTextContainer">
-            <textarea disabled></textarea>
+            <textarea id="translatedText" disabled></textarea>
         </div>
     </main>
     <footer>
-        <p>Some information</p>
+        <p>Version 1.0</p>
     </footer>
 </div>
 </body>
